# tezos

./: .gitignore  .gitlab-ci.yml  BUILD.vertalo.md  Makefile  Makefile.freebsd  Makefile.vertalo  dune
.gitlab/ci/: opam.yml  unittest.yml
docs/: index.rst
docs/007/: emmy.rst  proof_of_stake.rst
scripts/: install_build_deps.raw.sh  install_build_deps.rust.sh  install_build_deps.sh  version.sh
src/lib_client_commands/: client_keys_commands.ml
src/lib_crypto/: hacl.ml
src/lib_p2p/: p2p_io_scheduler.ml
tests_python/tests/: test_client_without_node.py
tezt/tests/: cli_tezos.ml
vendors/hacl-star/: hacl-star-raw.opam
vendors/hacl-star/raw/: .depend.ocaml  Makefile.config  config.h  configure
vendors/ocaml-lmdb/config/: discover.ml
vendors/ocaml-lmdb/src/: dune  lmdb_stubs.c
vendors/ocaml-lmdb/test/: test.ml
vendors/ocaml-secp256k1/src/: dune
vendors/secp256k1-internal.0.2.0/config/: discover.ml
vendors/secp256k1-internal.0.2.0/src/: dune
