(library
 (name            lmdb)
 (public_name     tezos-lmdb)
 (libraries       rresult)
 (c_names         lmdb_stubs)
 (c_flags         (:include c_flags.sexp))
 (c_library_flags (-L/usr/local/lib -lpthread -llmdb)))

(rule
 (targets c_flags.sexp)
 (action  (run %{exe:../config/discover.exe} -ocamlc %{ocamlc})))
