(library
 (name            lmdb)
 (public_name     tezos-lmdb)
 (libraries       rresult)
 (foreign_stubs
  (language c)
  (names lmdb_stubs)
  (flags -lpthread -Wstringop-overflow=0
         (:include c_flags.sexp)))
  (library_flags (-cclib -llmdb)))(rule
 (targets c_flags.sexp)
 (action  (run %{exe:../config/discover.exe} -ocamlc %{ocamlc})))
